@@ -1,3 +1,8 @@
+2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: more fixes related to moving..
+
 2006-09-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Win_GParted.cc: small menu changes
